# UniProt-MCP

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml  test_client.py
mcp_server/: __init__.py  __main__.py
mcp_server/api/: __init__.py  tools.py
mcp_server/utils/: __init__.py  api_client.py
tests/: __init__.py  test_api_client.py  test_tools.py
